# ruml

./: '  Cargo.toml  NOTES.md  README.md
.cargo/: config.toml
benches/: matmul.rs  ops.rs
examples/: matmul.rs
scripts/: cmp_bench.sh  matmul_cmp.py
src/: lib.rs  ops.rs  types.rs
src/backend/: backend_test.rs  cpu.rs  mod.rs
src/graph/: graph_tensor.rs  mod.rs
src/tensor/: graph.rs  graph_tensor.rs  mod.rs  shape.rs  shape_test.rs  tensor_test.rs
