[package]
name = "ruml"
edition = "2021"
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
categories = ["library"]
description = "a smol tensor library"
repository = "https://github.com/notjedi/ruml"
authors = ["Krithic Kumar krithickumarub@protonmail.com"]
keywords = ["tensor", "tensor-library", "machine-learning"]


[dependencies]
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
num-traits = { version = "0.2", default-features = false }
rand_distr = { version = "0.4", default-features = false }
aligned-vec = { version = "0.5", default-features = false }

[features]
default = ["std"]
std = []

# https://doc.rust-lang.org/cargo/reference/profiles.html
# [profile.release]
# lto = "fat"
# codegen-units = 1
