[package]
name = "ruml"
edition = "2021"
version = "0.1.0"
license = "GPL-3.0"
readme = "README.md"
categories = ["library"]
description = "a smol tensor library"
repository = "https://github.com/notjedi/ruml"
authors = ["Krithic Kumar krithickumarub@protonmail.com"]
keywords = ["tensor", "tensor-library", "machine-learning"]


[dependencies]
rand = { version = "0.8", default-features = false, features = ["std_rng"] }
wide = { version = "0.7", default-features = false }
num-traits = { version = "0.2", default-features = false }
rand_distr = { version = "0.4", default-features = false }
aligned-vec = { version = "0.5", default-features = false }
rayon = "1.7.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = ["std"]
std = []

[[bench]]
name = "matmul"
harness = false

[[bench]]
name = "ops"
harness = false
